--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,38 +5,78 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
+    android:gravity="center_horizontal"
+    android:background="#FFFCF3"
     tools:context=".MainActivity">
 
-    <ImageView
-        android:id="@+id/imgMeme"
-        android:layout_width="match_parent"
-        android:layout_height="660dp"
-        android:paddingLeft="20dp"
-        android:paddingRight="20dp"
-        android:paddingTop="20dp" />
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="MemesLand"
+        android:textSize="40sp"
+        android:textStyle="bold"
+        android:textColor="#EDD600"
+        android:layout_marginTop="40dp"/>
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:weightSum="2">
+    <androidx.cardview.widget.CardView
+        android:layout_width="340dp"
+        android:layout_height="500dp"
+        android:layout_marginTop="15dp"
+        android:layout_gravity="center_horizontal"
+        app:cardCornerRadius="25dp">
 
-        <Button
-            android:id="@+id/btnShare"
+        <RelativeLayout
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:layout_margin="10dp"
-            android:text="Share"/>
+            android:layout_height="wrap_content">
 
-        <Button
-            android:id="@+id/btnNext"
+            <ImageView
+                android:id="@+id/imgMeme"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:paddingLeft="20dp"
+                android:scaleType="fitCenter"
+                android:paddingTop="20dp"
+                android:paddingRight="20dp" />
+
+            <ProgressBar
+                android:id="@+id/progressBar"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerVertical="true"
+                android:layout_marginLeft="150dp"
+                android:visibility="invisible"/>
+        </RelativeLayout>
+
+
+    </androidx.cardview.widget.CardView>
+
+    <androidx.cardview.widget.CardView
+        android:layout_width="200dp"
+        android:layout_height="60dp"
+        app:cardCornerRadius="30dp"
+        android:layout_marginTop="20dp"
+        android:outlineAmbientShadowColor="@color/black"
+        android:outlineSpotShadowColor="@color/white">
+
+        <RelativeLayout
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:layout_margin="10dp"
-            android:text="Next"
-            android:padding="10dp" />
+            android:layout_height="wrap_content">
+            <ImageView
+                android:id="@+id/btnShare"
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                android:layout_marginTop="10dp"
+                android:layout_marginLeft="30dp"
+                android:src="@drawable/share"/>
 
-    </LinearLayout>
+            <ImageView
+                android:id="@+id/btnNext"
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                android:layout_marginTop="10dp"
+                android:src="@drawable/next"
+                android:layout_marginLeft="120dp"/>
+        </RelativeLayout>
+    </androidx.cardview.widget.CardView>
 
 </LinearLayout>
